--- a/index.html
+++ b/index.html
@@ -382,7 +382,12 @@
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
-		<td rowspan="3">Java版快照 20w18a-20w20b</td>
+		<td rowspan="3">Java版快照 20w18a-20w21a</td>
+		<td>快照 v1.11-0521</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0521.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0521.zip">官方</a></td>
+	</tr>
+	<tr>
 		<td>快照 v1.11-0517</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0517.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0517.zip">官方</a></td>
@@ -392,14 +397,14 @@
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0515.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0515.zip">官方</a></td>
 	</tr>
-	<tr>
-		<td>快照 v1.11-0507</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0507.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0507.zip">官方</a></td>
-	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td rowspan="3">Java版 1.15.2</td>
+		<td>v1.10.11</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.11">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.11.zip">官方</a></td>
+	</tr>
+	<tr>
 		<td>v1.10.10</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.10">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.10.zip">官方</a></td>
@@ -408,11 +413,6 @@
 		<td>v1.10.9</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.9">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.9.zip">官方</a></td>
-	</tr>
-	<tr>
-		<td>v1.10.8</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.8">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.8.zip">官方</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
@@ -3679,7 +3679,7 @@
 <p>信标增强器性质同箱子。信标增强器被原版红石元件强充能时会停止工作。</p>
 <p>信标增强器下方为激活的信标才会工作。左侧按钮用于选择对玩家生效的正面状态效果，右侧按钮用于选择对非玩家生物生效的负面状态效果，最右侧按钮用于选择负面状态效果对所有非玩家生物还是仅怪物生效，使用左键或Q键切换。对村民无效。</p>
 <p>对玩家生效的正面状态效果包括：抗火、夜视、水下呼吸、隐身、饱和、连锁(1.10起)，对非玩家生物生效的负面状态效果包括：虚弱、缓慢、发光、中毒、凋零、吸引(1.10起)。影响范围基于下方的信标等级，为半径=10×(等级+1)的球形区域。</p>
-<p><span class="version">1.10 起</span> 对已放置的信标增强器按下右键会打开 GUI，任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强仪的效果范围提升至全地图(吸引范围128米)！吸引的效果是将附近的生物传送至信标增强仪上方。</p>
+<p><span class="version">1.10 起</span> 放置/破坏信标增强仪可以添加/取消当前区块常加载。对已放置的信标增强器按下右键会打开 GUI，任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强仪的效果范围提升至全地图(吸引范围128米)！吸引的效果是将附近的生物传送至信标增强仪上方。</p>
 <p><span class="oldversion">1.9.x</span> 若下方为4级信标，每秒恢复64米内玩家1点魔法值，上限60点。若信标矿物块塔的顶层为X形的5个日石和4个月石，则额外每秒恢复128米内玩家1点魔法值，上限100点。</p>
 
 <h3 id="金砧">金砧 <code>cpp:golden_anvil</code></h3>
@@ -9191,10 +9191,10 @@
 	<th>合成配方</th></tr></thead>
 <tbody>
 <tr><th>新春装饰</th>
-	<td>羽毛+墨囊+红色染料+纸</td>
+	<td>羽毛+黑色染料+红色染料+纸</td>
 	<td><span class="ui cm" title="合成器">
 		<a class="feather" title="羽毛"></a>
-		<a class="ink_sac" title="墨囊"></a>
+		<a class="black_dye" title="黑色染料"></a>
 		<a class="red_dye" title="红色染料"></a>
 		<a class="paper" title="纸"></a>
 		<a class="empty"></a>
@@ -9672,7 +9672,7 @@
 	<th>内部ID</th>
 </tr></thead><tbody>
 <tr><td><span class="ui normal"><a class="ci crafting_machine"></a></span></td>
-<th class="lore">开启模组</th><td class="lore">感谢您的使用</td>
+<th class="lore">Crafting++</th><td class="lore">感谢您的使用</td>
 	<td>—</td>
 	<td>—</td>
 	<td>cpp:root</td>
@@ -9878,7 +9878,7 @@
 </tr>
 <tr><td><span class="ui challenge"><a class="ci compressor"></a></span></td>
 <th>叮当猫的口袋</th>
-	<td>八重……算了，两重吧</td>
+	<td>八重……算了，三重吧</td>
 	<td>—</td>
 	<td>参数测定</td>
 	<td>cpp:doraemon</td>
@@ -9920,7 +9920,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-05-17</p>
+<p>最后更新 2020-05-21</p>
 </footer>
 
 </article>
