--- a/index.html
+++ b/index.html
@@ -5594,12 +5594,12 @@
 </tbody></table>
 <p>右击可放置一个工作台，玩家离开后会自动消失。</p>
 
-<h3 id="便携式合成器">便携式工作台</h3>
+<h3 id="便携式合成器">便携式合成器</h3>
 <p class="noindent">命名空间ID <code>cpp:portable_crafting_machine</code></p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><td>工作台+附魔之瓶</td>
+<tr><td><a href="#合成器">合成器</a>+附魔之瓶</td>
 	<td><span class="ui cm" title="合成器">
-		<a class="ci crafting_machine" title="合成器"></a>
+		<a href="#合成器" class="ci crafting_machine" title="合成器"></a>
 		<a href="#附魔之瓶" class="experience_bottle" title="附魔之瓶"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
