--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
 <meta name='revised' content='ruhuasiyu@mcbbs' />
 <base href="" />
-<link rel="shortcut icon" href="https://zsx.neocities.org/main/favicon.ico" />
+<link rel="shortcut icon" href="items/favicon.ico" />
 <link rel="stylesheet" href="items/items_css.css" />
 </head>
 
