--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <nav class="smallicons"><ul>
 <li style="border-bottom: #ddd 4px solid;padding:3px 0 3px 16px;"><a href="#banner">更多的合成</a></li>
 <li><a href="#自然生成"><span style="background-position: -384px -480px;"></span> 自然生成</a><ul>
+	<li><a href="#花世界"><span style="background-position: -256px -1712px;"></span> 花世界</a></li>
 	<li><a href="#苦力怕地牢"><span style="background-position: -384px -480px;"></span> 苦力怕地牢</a></li>
 	<li><a href="#附魔室"><span style="background-position: -448px -608px;"></span> 附魔室</a></li>
 	<li><a href="#图腾柱"><span style="background-position: -0px -1680px;"></span> 图腾柱</a></li>
@@ -158,7 +159,6 @@
 	<li><a href="#压缩器"><span class="ci" style="background-position: -80px -144px;"></span> 压缩器</a></li>
 	<li><a href="#年长者之教诲"><span class="ci" style="background-position: -96px -144px;"></span> 年长者之教诲</a></li>
 	<li><a href="#坐标记录仪"><span class="ci" style="background-position: -112px -144px;"></span> 坐标记录仪</a></li>
-	<li><a href="#无尽桶"><span class="ci" style="background-position: -032px -1168px;"></span> 无尽桶</a></li>
 	<li><a href="#消音器"><span class="ci" style="background-position: -32px -720px;"></span> 消音器</a></li>
 	<li><a href="#剪枝器"><span class="ci" style="background-position: -128px -144px;"></span> 剪枝器</a></li>
 </ul><ul>
@@ -382,20 +382,10 @@
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
-		<td rowspan="3">Java版快照 20w18a-20w21a</td>
-		<td>快照 v1.11-0521</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0521.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0521.zip">官方</a></td>
-	</tr>
-	<tr>
-		<td>快照 v1.11-0517</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0517.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0517.zip">官方</a></td>
-	</tr>
-	<tr>
-		<td>快照 v1.11-0515</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0515.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0515.zip">官方</a></td>
+		<td>Java版 1.16-rc1</td>
+		<td>快照 v1.11-0619</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0619.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0619.zip">官方</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
@@ -424,12 +414,8 @@
 </tbody></table>
 
 <p>视频教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a></p>
-<p>下载后解压缩。</p>
-<ul>
-<li><a style="font-weight:bold;">资源包</a>文件夹位于<code>.minecraft/resourcepacks</code>文件夹，该文件夹也可从游戏界面<code>选项->资源包->打开资源包文件夹</code>处打开。将<code>更多的合成资源包.zip</code>放入，然后进入选择资源包的页面，选择该资源包至右侧已选的资源包。如果仍然无法使用，请解压后放入。</li>
-<li><a style="font-weight:bold;">数据包</a>文件夹位于<code>.minecraft/saves/世界名称/datapacks</code>文件夹，该文件夹也可从游戏界面<code>选中世界->编辑->打开世界文件夹->打开datapacks文件夹</code>处打开。将<code>更多的合成数据包.zip</code>放入，然后退出世界重进。</li>
-</ul>
-<p>版本 1.9.x 还需要设置<code>选项->语言->强制使用Unicode字体：关</code>。</p>
+<p>下载后解压缩。对于新世界（适用于1.16+），在生成世界前可以在世界预设中点击数据包，将<code>更多的合成数据包.zip</code>拖拽进打开的界面，并启用即可。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将<code>更多的合成资源包.zip</code>拖拽进打开的界面，并启用即可。版本 1.9.x 还需要设置<code>选项->语言->强制使用Unicode字体：关</code>。</p>
+<p>对于已生成的世界，选中世界并点击<code>编辑->打开世界文件夹->打开datapacks文件夹</code>来打开数据包文件夹。将数据包放入，然后退出世界重进或输入 /reload（这需要世界为开启作弊状态）来重新加载即可。</p>
 <ul>
     <li>大部分合成需使用<a href="#合成器">合成器</a>，本页面中所有绿色背景的合成表均为使用合成器的合成配方。模组需要的<a href="#附魔之瓶">附魔之瓶</a>可通过副手持有漏斗获取。</li>
     <li>模组支持英文、简体中文、繁体中文。</li>
@@ -472,6 +458,13 @@
 
 <!--==================================================================-->
 <h2 id="自然生成">自然生成</h2>
+<h3 id="花世界">花世界</h3>
+<p><span class="version">1.11</span> 花世界生物群系固定为繁花森林，时间固定为正午，不刷生物。花世界地下会生成地牢，其中包含日石、干草块和宝箱，宝箱含各种花。将大型花摆放成正八边形，然后在中间放置白色羊毛即可激活至花世界的传送门。</p>
+<figure>
+	<img style="height:260px" src="items/screenshots/flower_portal.png" title="花世界传送门" />
+	<figcaption>图 花世界传送门</figcaption>
+</figure>
+
 <h3 id="苦力怕地牢">苦力怕地牢</h3>
 <p><span class="version">1.10 起</span> 原版主世界的地牢的刷怪笼有几率为苦力怕刷怪笼。</p>
 <p><span class="oldversion">1.9.x</span> 旧版本则是一个天然生成在主世界的地下y=20附近、由圆石和苔石构成的封闭小房间，包含固定位置的苦力怕刷怪笼和地牢宝箱。</p>
@@ -498,7 +491,7 @@
 </figure>
 
 <h3 id="水果树">水果树</h3>
-<p>天然生成在主世界的地表土质方块上，形状与桦树相同，树干为橡木。</p>
+<p>天然生成在主世界和花世界的地表土质方块上，形状与桦树相同，树干为橡木。</p>
 <p><span class="version">1.10 起</span> 树下偶见掉落的水果。</p>
 <p><span class="oldversion">1.9.x</span> 树叶下方偶见挂枝的水果。</p>
 <figure>
@@ -507,21 +500,21 @@
 </figure>
 
 <h3 id="矿石树">矿石树</h3>
-<p>天然生成在主世界的地表土质方块上，形状与桦树相同，树干为云杉木。树上偶见成熟的矿石。</p>
+<p>天然生成在主世界和花世界的地表土质方块上，形状与桦树相同，树干为云杉木。树上偶见成熟的矿石。</p>
 <figure>
 	<img style="height:224px" src="items/screenshots/ore_tree.png" title="已有金矿和煤矿的矿石树" />
 	<figcaption>图 已有金矿和煤矿的矿石树</figcaption>
 </figure>
 
 <h3 id="羊毛树">羊毛树</h3>
-<p>天然生成在主世界的地表土质方块上，形状与桦树相同，树干为桦木。破坏后会掉落羊毛树树苗、羊毛、鱼或羊。</p>
+<p>天然生成在主世界和花世界的地表土质方块上，形状与桦树相同，树干为桦木。破坏后会掉落羊毛树树苗、羊毛、鱼或羊。</p>
 <figure>
 	<img style="height:224px" src="items/screenshots/wool_tree.png" title="五彩的羊毛树" />
 	<figcaption>图 五彩的羊毛树</figcaption>
 </figure>
 
 <h3 id="樱花树">樱花树</h3>
-<p><span class="version">1.10 起</span> 天然生成在主世界的地表土质方块上，形状与桦树相同，树干为丛林木。破坏后会掉落樱桃。</p>
+<p><span class="version">1.10 起</span> 天然生成在主世界和花世界的地表土质方块上，形状与桦树相同，树干为丛林木。破坏后会掉落樱桃。</p>
 <figure>
 	<img style="height:224px" src="items/screenshots/sakura_tree.png" title="樱花树" />
 	<figcaption>图 樱花树</figcaption>
@@ -535,7 +528,7 @@
 </figure>
 
 <h3 id="灌木丛">灌木丛</h3>
-<p>小型的灌木丛，天然生成在主世界的地表土质方块上，由一块橡木和若干橡树树叶构成。</p>
+<p>小型的灌木丛，天然生成在主世界和花世界的地表土质方块上，由一块橡木和若干橡树树叶构成。</p>
 <figure>
 	<img style="height:190px" src="items/screenshots/bush.png" title="灌木丛，远处是羊毛树" />
 	<figcaption>图 灌木丛，远处是羊毛树</figcaption>
@@ -556,7 +549,8 @@
 </figure>
 
 <h3 id="花草丛">花草丛</h3>
-<p>由多彩的花草构成的簇，美丽且有各种实用价值。</p>
+<p><span class="version">1.11 起</span> 天然生成在花世界的地表，由多彩的花草构成的簇，美丽且有各种实用价值。</p>
+<p><span class="oldversion">1.9-1.10</span> 天然生成在主世界的地表，由多彩的花草构成的簇，美丽且有各种实用价值。</p>
 <figure>
 	<img style="height:190px" src="items/screenshots/flowers.png" title="一簇风信子" />
 	<figcaption>图 一簇风信子</figcaption>
@@ -2682,9 +2676,10 @@
 <p>左上方放入工具，左侧放入材料，机器会以每刻1次的速度工作。下方为输出方向按钮，使用左键或Q键切换。右侧方格为输出栏，当右侧输出栏中有物品时，机器会停止工作。若输出方向有<abbr title="漏斗、投掷器、发射器、箱子、木桶、潜影盒">容器</abbr>且容器有空栏位时，会将右侧输出栏内的物品转移到容器中。</p>
 <p>每次工作时，工具若有耐久会消耗1点耐久，否则不会被消耗。工具可以是原版任意材质。</p>
 <p class="note">物品处理器的函数接口<code>function #cpp:item_processer</code>调用于<code>cpp/functions/item_processer/type.mcfunction</code>。配方按工具分类，位于<code>cpp/predicates/item_processer</code>和<code>cpp/loot_tables/item_processer</code>。</p>
-<p><span class="version">1.9.x</span> 配方略有差异。</p>
+<p><span class="oldversion">1.9.x</span> 配方略有差异。</p>
 
-<p>水桶/熔岩桶/空桶可以被合理的<a href="#无尽桶">无尽桶</a>代替，其中水桶+无尽桶会一次性把熔岩全部变成黑曜石。</p>
+<p><span class="oldversion">1.10</span> 水桶/熔岩桶/空桶可以被合理的<a href="#无尽桶">无尽桶</a>代替。</p>
+<p><span class="version">1.11</span> 水桶/熔岩桶可以被合理的<a href="#绿色水之力">绿色水之力</a>代替。</p>
 <button style="display:none;cursor:pointer;" onclick="this.style.display='none';this.nextElementSibling.nextElementSibling.style.display='table';this.nextElementSibling.style.display='inline';">显示物品处理机配方表</button>
 <button onclick="this.style.display='none';this.nextElementSibling.style.display='none';this.previousElementSibling.style.display='inline';">隐藏物品处理机配方表</button>
 <table style="background-color:#ccc;"><thead><tr>
@@ -2703,11 +2698,11 @@
 	<td><a class="ui coarse_dirt" title="砂土"></a></td>
 	<th rowspan="2"><a class="ui stone_pickaxe" title="石镐"></a></th>
 	<td><a class="ui stone" title="石头"></a></td>
+	<td><a class="ui crimson_nylium" title="绯红菌岩"></a></td>
+	<td><a class="ui warped_nylium" title="诡异菌岩"></a></td>
 	<td><a class="ui glowstone" title="荧石"></a></td>
 	<th rowspan="2"><a class="ui shears" title="剪刀"></a></th>
 	<td colspan="2"><a class="ui pumpkin" title="南瓜"></a></td>
-	<td></td>
-	<td></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -2721,11 +2716,11 @@
 	<td><a class="ui snowball" title="雪球"><span class="stack">4</span></a></td>
 	<td><a class="ui dirt" title="泥土"></a></td>
 	<td><a class="ui cobblestone" title="圆石"></a></td>
+	<td><a class="ui netherrack" title="下界岩"></a></td>
+	<td><a class="ui netherrack" title="下界岩"></a></td>
 	<td><a class="ui glowstone_dust" title="荧石粉"><span class="stack">4</span></a></td>
 	<td colspan="2"><a class="ui carved_pumpkin" title="雕刻过的南瓜"></a>
 		<a class="ui pumpkin_seeds" title="南瓜种子"><span class="stack">4</span></a></td>
-	<td></td>
-	<td></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -3137,7 +3132,6 @@
 
 <tr>
 	<th rowspan="2"><a href="#绿色水之力" class="ui ci green_force_of_water" title="绿色水之力"></a></th>
-	<td><a class="ui glass_bottle" title="玻璃瓶"></a></td>
 	<td><a class="ui bucket" title="桶"></a></td>
 	<th rowspan="2"><a class="ui grass_block" title="草方块"></a></th>
 	<td><a class="ui dirt" title="泥土"></a></td>
@@ -3155,12 +3149,13 @@
 	<td></td>
 	<td></td>
 	<td></td>
+	<td></td>
 </tr>
-<tr><td><a class="ui water_bottle" title="水瓶"></a></td>
 	<td><a class="ui water_bucket" title="水桶"></a></td>
 	<td><a class="ui grass_block" title="草方块"></a></td>
 	<td><a class="ui mycelium" title="菌丝"></a></td>
 	<td colspan="3">对应的重数+1物品</td>
+	<td></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -5402,7 +5397,9 @@
 </tr></tbody></table>
 
 <h3 id="绿色水之力">绿色水之力 <code>cpp:green_force_of_water</code></h3>
-<p>右击放置一格水，在下界亦可正常使用。<em>Surrare Lilpana!</em></p>
+<p><span class="version">1.11</span> 右键收集水和熔岩并存储起来。Shift右键放置水和熔岩，对着空气Shift右键切换放置何种液体。默认拥有无限水。<em>Surrare Lilpana!</em></p>
+<p><span class="oldversion">1.9-1.10</span> 右击放置一格水，在下界亦可正常使用。</p>
+
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td>绿色染料+红石+<a href="#水晶之心">水晶之心</a></td>
 	<td><span class="ui cm" title="合成器">
@@ -5745,7 +5742,7 @@
 </tbody></table>
 
 <h3 id="无尽桶">无尽桶 <code>cpp:infinite_bucket</code></h3>
-<p><span class="version">1.10 起</span> 右键收集水和熔岩并存储起来。Shift右键放置水和熔岩，对着空气Shift右键切换放置何种液体。</p>
+<p><span class="oldversion">1.10</span> 右键收集水和熔岩并存储起来。Shift右键放置水和熔岩，对着空气Shift右键切换放置何种液体。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td><a href="#附魔铁锭">附魔铁锭</a</td>
 	<td><span class="ui cm" title="合成器">
@@ -6970,8 +6967,7 @@
 		<a class="coal" title="燃料"></a>
 		<a class="ci rabbit_stew" title="兔肉煲"></a>
 	</span></td>
-	<td><code>cpp:rabbit_stew</code><br />
-	原兔肉煲的配方已被移除。</td>
+	<td><code>cpp:rabbit_stew</code></td>
 </tr>
 <tr><th><strong id="饺子">饺子</strong><br />
 		<a class="ui icons18 hunger" title="8"></a><a class="ui icons18 hunger" title="8"></a><a class="ui icons18 hunger" title="8"></a><a class="ui icons18 hunger" title="8"></a></th>
@@ -7745,7 +7741,7 @@
 <!--==================================================================-->
 <h2 id="植物">植物</h2>
 <h3 id="花草">花草</h3>
-<p>新增34种花草，天然生成在主世界草方块上。</p>
+<p>新增34种花草，天然生成在主世界(1.11前)/花世界(1.11)草方块上。</p>
 <p>前20种花草在合成器中合成为3个对应种子。一共4个生长阶段，成熟后收割可获得相应花草，否则只能获得种子。作物不受时运影响，可用骨粉催熟。每个花草都对应一个实体，大面积种植可能会卡顿。收获成熟的小麦、胡萝卜、马铃薯和甜菜根有5%几率获得六种花草种子，其余花草种子可以通过杂交得到：当一种作物将要生长成熟时，若邻近的花草可杂交，则有5%几率变异为其它花草。</p>
 <p><span class="version">1.10.2 起</span> 后13种野花在空岛模式下可以通过对草方块使用骨粉得到。蓝色妖姬使用玫瑰丛+蓝色染料在合成器合成。</p>
 <p>花草可在熔炉熔炼成其它物品，还可用于合成迷之炖菜，见下表。</p>
@@ -8133,8 +8129,9 @@
 
 <h3 id="稻谷">稻谷 <code>cpp:rice</code></h3>
 <a class="ui ci rice"></a><a class="ui ci rice0"></a><a class="ui ci rice1"></a><a class="ui ci rice2"></a><a class="ui ci rice3"></a>
-<p>破坏草有几率得到稻谷。可以种植在任何土上，但如果不是耕地则会不定时弹出。</p>
-<p>下方必须是完全湿润的耕地，否则即使使用骨粉不会生长。生长共4个阶段，完全成熟后破坏得到4份稻谷，否则只能得到1份稻谷。</p>
+<p>破坏草有几率得到稻谷，可以种植在任何土上。生长共4个阶段，完全成熟后破坏得到4份稻谷，否则只能得到1份稻谷。</p>
+<p><span class="version">1.11</span> 必须邻近水，否则即使使用骨粉也不会生长。</p>
+<p><span class="oldversion">1.10</span> 下方如果不是耕地则会不定时弹出。下方必须是完全湿润的耕地，否则即使使用骨粉也不会生长。</p>
 
 <h3 id="树">树</h3>
 <table><thead><tr><th>名称</th>
@@ -8563,7 +8560,7 @@
 <!--==================================================================-->
 <h2 id="装饰">装饰</h2>
 <h3 id="称号">称号</h3>
-<p>玩家手持绿宝石并根据下表的数字输入 <code>/trigger cppTitle set 数值</code> 即可消耗绿宝石并获得相应称号。</p>
+<p>玩家手持1个绿宝石并根据下表的数字输入 <code>/trigger cppTitle set 数值</code> 即可消耗绿宝石并获得相应称号。</p>
 <p><span class="version">1.10.10起</span> 设置为101可以取消称号。</p>
 <table class="center">
 <thead>
@@ -9138,8 +9135,10 @@
 吻、红磨坊舞会、松树林之晨、画家母亲肖像、暴风雨、
 意外归来、缠毛线、玩牌者、马克思与恩格斯、自由引导人民、
 拾穗、带珍珠耳环的少女、呐喊、向日葵、苏格拉底之死、
-金色的秋天、星月夜、最后的晚餐、开国大典、落霞孤鹜图、
-竹石图、寒江独钓图、松梅双鹤图、日常三人组、东云研究所、小魔女DoReMi。
+金色的秋天、星月夜、最后的晚餐、开国大典、列宁宣布苏维埃政权成立、
+竹石图、寒江独钓图、松梅双鹤图、落霞孤鹜图、松下鸣琴图、
+洛神赋图（局部）、步辇图（局部）、千里江山图（局部）、唐宫仕女图（局部）、汉宫春晓图（局部）、
+日常三人组、魔法少女小圆、小魔女DoReMi、小魔女学园、魔卡少女樱、南方公园、辛普森一家、天使降临到我身边、天才麻将少女、红岸基地。
 </p>
 
 <table><thead><tr><th>名称</th>
@@ -9164,7 +9163,7 @@
 </tbody></table>
 
 <h3 id="新春装饰">新春装饰</h3>
-		<a class="ui ci spring_festival_decorations"></a>
+<a class="ui ci spring_festival_decorations"></a>
 <p>放置后，右键可按次序切换图案。包括<br />
 日出江花红胜火 春来江水绿如蓝<br />
 爆竹声声辞旧岁 春联户户迎新春<br />
@@ -9174,10 +9173,16 @@
 绿竹别其三分景 红梅正报万家春<br />
 天增岁月人增寿 春满乾坤福满楼<br />
 喜居宝地千年旺 福照家门万事兴<br />
+一世良缘天地久 百年佳偶共天长<br />
+寒食雨传百五日 花信风来廿四春<br />
+端午粽香闻千载 楚时忠誉传万年<br />
+金鸡啼明天破晓 嫦娥起舞月高悬<br />
 鸟语花香 万象更新<br />
 四季平安 国泰民安<br />
 辞旧迎新 春回大地<br />
 四季长安 喜迎新春<br />
+天作之合 万古流芳<br />
+节序天中 万家团圆<br />
 春 福 五谷丰登 六畜兴旺
 </p>
 <img src="items/image/spring_couplets.png" style="width:920px;" alt="横批和春联" /><br />
@@ -9208,10 +9213,9 @@
 </tbody></table>
 
 <h3 id="纸片人">纸片人</h3>
-<p>对床shift右键可将图案转移至床上，破坏后可掉落。</p>
-<p>放置在地面的物品展示框可以展示。</p>
-<p>一共67种样式，从流浪商人处可购买。</p>
-<p>将纸片人重命名为其它名称后，可以在合成器中和绿宝石合成来变更人物。(1.10 起)</p>
+<p>对床shift右键可将图案转移至床上，破坏后可掉落。放置在地面的物品展示框可以展示。</p>
+<p>可从流浪商人处购买。不同版本数量有所不同。</p>
+<p><span class="version">1.10起</span> 将纸片人重命名为其它名称后，可以在合成器中和绿宝石合成来变更人物。</p>
 <table><thead><tr><th>名称</th><th>图案</th><th>战利品表路径</th></tr></thead><tbody>
 <tr><th>樱之宫莓香</th><td><a class="ui ci character01"></a></td><td>cpp:character/01</td></tr>
 <tr><th>日向夏帆</th><td><a class="ui ci character02"></a></td><td>cpp:character/02</td></tr>
@@ -9277,9 +9281,6 @@
 <tr><th>祢豆子</th><td><a class="ui ci character62"></a></td><td>cpp:character/62</td></tr>
 <tr><th>木下优子</th><td><a class="ui ci character63"></a></td><td>cpp:character/63</td></tr>
 <tr><th>七海千秋</th><td><a class="ui ci character64"></a></td><td>cpp:character/64</td></tr>
-<tr><th>曲林静树</th><td><a class="ui ci character65"></a></td><td>cpp:character/65</td></tr>
-<tr><th>沙耶</th><td><a class="ui ci character66"></a></td><td>cpp:character/66</td></tr>
-<tr><th>射命丸文</th><td><a class="ui ci character67"></a></td><td>cpp:character/67</td></tr>
 </tbody></table>
 
 <h3>旗帜、标志和盾牌图案</h3>
@@ -9395,30 +9396,31 @@
 </tbody></table>
 
 <h3 id="彩色告示牌">彩色告示牌</h3>
-		<a class="ui ci white_sign"></a>
-		<a class="ui ci orange_sign"></a>
-		<a class="ui ci magenta_sign"></a>
-		<a class="ui ci light_blue_sign"></a>
-		<a class="ui ci yellow_sign"></a>
-		<a class="ui ci lime_sign"></a>
-		<a class="ui ci pink_sign"></a>
-		<a class="ui ci gray_sign"></a>
-		<a class="ui ci light_gray_sign"></a>
-		<a class="ui ci cyan_sign"></a>
-		<a class="ui ci purple_sign"></a>
-		<a class="ui ci blue_sign"></a>
-		<a class="ui ci red_sign"></a>
-		<a class="ui ci brown_sign"></a>
-		<a class="ui ci green_sign"></a>
-		<a class="ui ci black_sign"></a>
-		<a class="ui ci glass_sign"></a>
+<a class="ui ci white_sign"></a>
+<a class="ui ci orange_sign"></a>
+<a class="ui ci magenta_sign"></a>
+<a class="ui ci light_blue_sign"></a>
+<a class="ui ci yellow_sign"></a>
+<a class="ui ci lime_sign"></a>
+<a class="ui ci pink_sign"></a>
+<a class="ui ci gray_sign"></a>
+<a class="ui ci light_gray_sign"></a>
+<a class="ui ci cyan_sign"></a>
+<a class="ui ci purple_sign"></a>
+<a class="ui ci blue_sign"></a>
+<a class="ui ci red_sign"></a>
+<a class="ui ci brown_sign"></a>
+<a class="ui ci green_sign"></a>
+<a class="ui ci black_sign"></a>
+<a class="ui ci glass_sign"></a>
 
+<p><span class="version">1.11</span> 移除了合成配方，改成向告示牌扔出染料/玻璃板来改变其材质。</p>
 <table><thead><tr><th>名称</th>
 	<th>材料</th>
 	<th>合成配方</th></tr></thead>
 <tbody>
 <tr><th>彩色告示牌</th>
-	<td>告示牌+染料</td>
+	<td>告示牌+染料 <span class="oldversion">1.9-1.10</span></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="oak_sign" title="橡木告示牌"></a>
 		<a class="red_dye" title="红色染料"></a>
@@ -9434,7 +9436,7 @@
 	</span></td>
 </tr>
 <tr><th>玻璃告示牌</th>
-	<td>告示牌+玻璃板</td>
+	<td>告示牌+玻璃板 <span class="oldversion">1.9-1.10</span></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="oak_sign" title="橡木告示牌"></a>
 		<a class="glass_pane" title="玻璃板"></a>
@@ -9449,7 +9451,6 @@
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td></tr>
 </tbody></table>
-
 <img style="width:90%" src="items/screenshots/colorful_sign.png" alt="彩色告示牌" />
 
 <h3 id="玻璃物品展示框">玻璃物品展示框</h3>
@@ -9532,7 +9533,7 @@
 
 <h3 id="箱子整理">箱子整理</h3>
 <p>当玩家主手持有木棍右击箱子/潜影箱后，容器内的物品会被整理。</p>
-<p>使用命令<code>/trigger cppTrim</code>来整理自己背包(不含快捷栏)。</p>
+<p><span class="oldversion">1.9-1.10</span> 使用命令<code>/trigger cppTrim</code>来整理自己背包(不含快捷栏)。</p>
 
 <h3 id="自动插火把">自动插火把</h3>
 <p>使用指令<code>/trigger cppAutoTorch set 刻数</code>，可以设定每隔一段时间自动插一根火把。设置为0取消自动插火把功能。</p>
