--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 	<li><a href="#垃圾桶"><span class="ci" style="background-position: -0px -720px;"></span> 垃圾桶</a> </li>
 	<li><a href="#箱漏"><span class="ci" style="background-position: -128px -720px;"></span> 箱漏</a> </li>
 	<li><a href="#空书架"><span class="ci" style="background-position: -96px -0px;"></span> 空书架</a></li>
-	<li><a><span class="ci" style="background-position: -128px -1200px;"></span> </a></li>
 </ul><ul>
 	<li><a href="#空白插件"><span class="ci" style="background-position: -112px -0px;"></span> 空白插件</a> </li>
 	<li><a href="#低温插件"><span class="ci" style="background-position: -128px -0px;"></span> 低温插件</a> </li>
@@ -160,6 +159,7 @@
 	<li><a href="#年长者之教诲"><span class="ci" style="background-position: -96px -144px;"></span> 年长者之教诲</a></li>
 	<li><a href="#坐标记录仪"><span class="ci" style="background-position: -112px -144px;"></span> 坐标记录仪</a></li>
 	<li><a href="#消音器"><span class="ci" style="background-position: -32px -720px;"></span> 消音器</a></li>
+	<li><a href="#香囊"><span class="ci" style="background-position: -16px -1216px;"></span> 香囊</a></li>
 	<li><a href="#剪枝器"><span class="ci" style="background-position: -128px -144px;"></span> 剪枝器</a></li>
 </ul><ul>
 	<li><a href="#玻璃镐"><span class="ci" style="background-position: -112px -416px;"></span> 玻璃镐</a></li>
@@ -184,7 +184,7 @@
 	<li><a href="#锁链盔甲"><span class="ci" style="background-position: -112px -400px;"></span> 锁链盔甲</a></li>
 	<li><a href="#铁砧"><span style="background-position: -128px -624px;"></span> 铁砧</a></li>
 </ul></li>
-<li class="up5"><a href="#饮食"><span class="ci" style="background-position: -128px -192px;"></span> 饮食</a><ul>
+<li class="up6"><a href="#饮食"><span class="ci" style="background-position: -128px -192px;"></span> 饮食</a><ul>
 	<li><a href="#营养均衡"><span style="background-position: -496px -464px;"></span> 营养均衡</a></li>
 	<li><a href="#附魔金苹果"><span style="background-position: -16px -416px;"></span> 附魔金苹果</a></li>
 	<li><a href="#番茄酱"><span class="ci" style="background-position: -112px -208px;"></span> 番茄酱</a></li>
@@ -238,6 +238,7 @@
 	<li><a href="#寿司"><span class="ci" style="background-position: -64px -224px;"></span> 寿司</a></li>
 	<li><a href="#青团"><span class="ci" style="background-position: -80px -1184px;"></span> 青团</a></li>
 	<li><a href="#樱饼"><span class="ci" style="background-position: -96px -1184px;"></span> 樱饼</a></li>
+	<li><a href="#粽子"><span class="ci" style="background-position: -000px -1216px;"></span> 粽子</a></li>
 	<li><a href="#三明治"><span class="ci" style="background-position: -80px -1136px;"></span> 三明治</a></li>
 	<li><a href="#仰望星空派"><span class="ci" style="background-position: -80px -224px;"></span> 仰望星空派</a></li>
 	<li><a href="#冷饮"><span class="ci" style="background-position: -128px -352px;"></span> 冷饮</a></li>
@@ -281,6 +282,7 @@
 </ul><ul>
 	<li><a href="#阿拉伯婆婆纳"><span class="ci" style="background-position: -32px -1104px;"></span> 阿拉伯婆婆纳</a></li>
 	<li><a href="#矮雪轮"><span class="ci" style="background-position: -48px -1104px;"></span> 矮雪轮</a></li>
+	<li><a href="#艾草"><span class="ci" style="background-position: -128px -1200px;"></span> 艾草</a></li>
 	<li><a href="#蓝色妖姬"><span class="ci" style="background-position: -64px -1104px;"></span> 蓝色妖姬</a></li>
 	<li><a href="#圣诞树"><span class="ci" style="background-position: -96px -352px;"></span> 圣诞树</a></li>
 	<li><a href="#圣诞花"><span class="ci" style="background-position: -112px -352px;"></span> 圣诞花</a></li>
@@ -382,7 +384,12 @@
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
-		<td>Java版 1.16-rc1</td>
+		<td rowspan="2">Java版 1.16-rc1</td>
+		<td>快照 v1.11-0620</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0620.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0620.zip">官方</a></td>
+	</tr>
+	<tr>
 		<td>快照 v1.11-0619</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0619.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0619.zip">官方</a></td>
@@ -411,18 +418,28 @@
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.24">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.24.zip">官方</a></td>
 	</tr>
+	<tr><td colspan="3"></td></tr>
+	<tr>
+		<td>Java版 1.10-1.13.2</td>
+		<td>v1.0-v1.8.4</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions">GitHub</a></td>
+	</tr>
 </tbody></table>
 
-<p>视频教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a></p>
-<p>下载后解压缩。对于新世界（适用于1.16+），在生成世界前可以在世界预设中点击数据包，将<code>更多的合成数据包.zip</code>拖拽进打开的界面，并启用即可。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将<code>更多的合成资源包.zip</code>拖拽进打开的界面，并启用即可。版本 1.9.x 还需要设置<code>选项->语言->强制使用Unicode字体：关</code>。</p>
-<p>对于已生成的世界，选中世界并点击<code>编辑->打开世界文件夹->打开datapacks文件夹</code>来打开数据包文件夹。将数据包放入，然后退出世界重进或输入 /reload（这需要世界为开启作弊状态）来重新加载即可。</p>
-<ul>
-    <li>大部分合成需使用<a href="#合成器">合成器</a>，本页面中所有绿色背景的合成表均为使用合成器的合成配方。模组需要的<a href="#附魔之瓶">附魔之瓶</a>可通过副手持有漏斗获取。</li>
-    <li>模组支持英文、简体中文、繁体中文。</li>
-    <li><a href="#空岛">空岛模式</a>建议玩家使用自定义超平坦如 <code>minecraft:air;minecraft:mountains;</code> 进入。</li>
-</ul>
+<p>模组支持英文、简体中文、繁体中文、<a href="https://www.mcbbs.net/thread-1004643-1-1.html"><del>梗体中文</del></a>。安装教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a></p>
+<ul><li><strong>1.16 版本</strong> 下载后解压缩。在生成世界前可以在世界预设中点击数据包，将<code>更多的合成数据包.zip</code>拖拽进打开的界面，并选择至右侧以启用。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将<code>更多的合成资源包.zip</code>拖拽进打开的界面，选择至右侧以启用。</li>
+<li><strong>1.15 版本</strong> 下载后解压缩。生成的世界后，选中世界并点击<code>编辑->打开世界文件夹->打开datapacks文件夹</code>，将数据包放入，然后重新进入世界。在主页面点击<code>选项->资源包->打开资源包文件夹</code>，将<code>更多的合成资源包.zip</code>放入文件夹内，然后在资源包页面将其选择至右侧以启用。</li>
+<li><strong>1.14 版本</strong> 下载后解压缩。生成的世界后，选中世界并点击<code>编辑->打开世界文件夹->打开datapacks文件夹</code>，将数据包放入，然后重新进入世界。在主页面点击<code>选项->资源包->打开资源包文件夹</code>，将<code>更多的合成资源包.zip</code>放入文件夹内，然后在资源包页面将其选择至右侧以启用。最后设置<code>选项->语言->强制使用Unicode字体：关</code>。</li></ul>
 
 <h3 id="常见问题">📄 常见问题</h3>
+<p>问：怎么合成不了？<br />
+	答：大部分合成需使用<a href="#合成器">合成器</a>，本页面中所有绿色背景的合成表均为使用合成器的合成配方。</p>
+<p>问：怎么获得附魔之瓶？<br />
+	答：模组需要的<a href="#附魔之瓶">附魔之瓶</a>可通过副手持有漏斗获取。</p>
+<p>问：空岛模式怎么玩？<br />
+	答：建议玩家使用自定义超平坦如 <code>minecraft:air;minecraft:mountains;</code> 进入。更多内容点击<a href="#空岛">空岛模式</a>。</p>
+<p>问：空岛怎么获得不了甘蔗？<br />
+	答：和流浪商人交易或者使用<a href="#紫色命之力">紫色命之力</a>转换。</p>
 <p>问：我可以将这个模组在我的服务器上使用吗？<br />
 	答：可以，如果你的服务器有盈利能力的话，建议在<a href="https://afdian.net/@ruhuasiyu">爱发电</a>根据自身盈利能力对作者进行赞助。</p>
 <p>问：那么怎么在服务器上使用呢？<br />
@@ -449,26 +466,25 @@
 
 <h3 id="制作者名单">👷 制作者名单</h3>
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
-<p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree XeKr 折君 天狼星black MC先生</p>
+<p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree XeKr 折君</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
 <p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">一米八微笑 明月庄主 Rhythm萱 唯一丶为伊 月下贱影 LIXIAOGANG SPGoding 陌余Oucher uuu2011 爱发电用户_AU9c 火星浮云 这是彩虹糖呢 古镇天 支持国产mod 倪采臣 zzzz 折君 空白 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx </span></p>
 <!--一米八微笑 250 明月庄主 250 Rhythm萱 128 月下贱影 100 LIXIAOGANG 96 SPGoding 88 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
-<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://www.mcmod.cn/class/250.html">无中生有</a>，<a href="https://www.mcmod.cn/class/353.html">等价交换</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>等小组以及pineapple_、贰逼、ECS、pca、玄素、乙烯_中国、⊙v⊙、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap、Lakejason等玩家亦对此模组有贡献。</p>
+<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://www.mcmod.cn/class/250.html">无中生有</a>，<a href="https://www.mcmod.cn/class/353.html">等价交换</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>等小组以及天狼星black、MC先生、pineapple_、贰逼、ECS、pca、玄素、乙烯_中国、⊙v⊙、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap、Lakejason等玩家亦对此模组有贡献。</p>
 <p>感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
 <!--==================================================================-->
 <h2 id="自然生成">自然生成</h2>
 <h3 id="花世界">花世界</h3>
-<p><span class="version">1.11</span> 花世界生物群系固定为繁花森林，时间固定为正午，不刷生物。花世界地下会生成地牢，其中包含日石、干草块和宝箱，宝箱含各种花。将大型花摆放成正八边形，然后在中间放置白色羊毛即可激活至花世界的传送门。</p>
+<p><span class="version">1.11</span> 花世界生物群系固定为繁花森林，时间固定为正午，不刷生物。将大型花摆放成正八边形，然后在中间放置白色羊毛即可激活至花世界的传送门。</p>
 <figure>
-	<img style="height:260px" src="items/screenshots/flower_portal.png" title="花世界传送门" />
-	<figcaption>图 花世界传送门</figcaption>
+	<img style="height:260px" src="items/screenshots/flower_world.png" title="花世界传送门" />
+	<figcaption>图 花世界传送门和图腾柱</figcaption>
 </figure>
 
 <h3 id="苦力怕地牢">苦力怕地牢</h3>
-<p><span class="version">1.10 起</span> 原版主世界的地牢的刷怪笼有几率为苦力怕刷怪笼。</p>
-<p><span class="oldversion">1.9.x</span> 旧版本则是一个天然生成在主世界的地下y=20附近、由圆石和苔石构成的封闭小房间，包含固定位置的苦力怕刷怪笼和地牢宝箱。</p>
-<p>注意苦力怕的爆炸可能会破坏刷怪笼。</p>
+<p><span class="version">1.10</span> 原版主世界的地牢的刷怪笼有几率为苦力怕刷怪笼。</p>
+<p><span class="oldversion">1.9.x</span> 旧版本则是一个天然生成在主世界的地下y=20附近、由圆石和苔石构成的封闭小房间，包含固定位置的苦力怕刷怪笼和地牢宝箱。注意苦力怕的爆炸可能会破坏刷怪笼。</p>
 <figure>
 	<img style="height:260px" src="items/screenshots/creeper_dungeon.png" title="隐秘的地下苦力怕地牢" />
 	<figcaption>图 隐秘的地下苦力怕地牢</figcaption>
@@ -478,15 +494,20 @@
 <p>这种人工痕迹明显的建筑天然生成在主世界的陆地地表，包含12个<a href="#空书架">空书架</a>、1个附魔台、1名幻术师。</p>
 <p>空书架包含至多3种物品，可能是纸、书、地图、指南针、随机地图(主世界存在的结构)和<a href="#上古卷轴">上古卷轴</a>。</p>
 <figure>
-	<img style="height:260px" src="items/screenshots/totem_pillar.png" title="图腾柱和附魔室" />
+	<img style="height:260px" src="items/screenshots/enchanting_room.png" title="图腾柱和附魔室" />
 	<figcaption>图 图腾柱和附魔室</figcaption>
 </figure>
 
 <h3 id="图腾柱">图腾柱</h3>
-<p>以前的人们建造的通往天上的塔，天然生成在主世界的陆地地表。图腾柱由各种石砖构成，并包含了矿石和宝箱，当心熔岩！宝箱可能包含<a href="#泥土之魂">泥土之魂</a>、<a href="#火焰之星">火焰之星</a>、<a href="#山脉之肢">山脉之肢</a>、<a href="#附魔金苹果">附魔金苹果</a>、<a href="#附魔铁锭">附魔铁锭</a>、<a href="#附魔金锭">附魔金锭</a>、<a href="#肉松面包">肉松面包</a>、<a href="#拔丝苹果">拔丝苹果</a>、煤炭、骨头、腐肉、火药和线。</p>
-<p><span class="version">1.11 起</span> 下界也会生成图腾柱，但是石砖变为黑石砖等方块，矿石变成下界的矿石和特有方块。</p>
+<p>以前的人们建造的通往天上的塔，天然生成在多个维度。图腾柱由主要方块包裹夹心方块构成。夹心中的宝箱可以包含<a href="#泥土之魂">泥土之魂</a>、<a href="#火焰之星">火焰之星</a>、<a href="#山脉之肢">山脉之肢</a>、<a href="#附魔金苹果">附魔金苹果</a>、<a href="#附魔铁锭">附魔铁锭</a>、<a href="#附魔金锭">附魔金锭</a>、<a href="#肉松面包">肉松面包</a>、<a href="#拔丝苹果">拔丝苹果</a>、煤炭、骨头、腐肉、火药和线。</p>
+
+<table><thead><tr><th>维度</th><th>主要方块</th><th>夹心方块</th></tr></thead><tbody>
+<tr><th>主世界</th><td><a class="ui stone_bricks" title="石砖"></a><a class="ui cracked_stone_bricks" title="裂石砖"></a><a class="ui mossy_stone_bricks" title="苔石砖"></a></td><td><a class="ui chest" title="宝箱"></a><a class="ui ci lava" title="熔岩"></a><a class="ui iron_ore" title="铁矿石"></a><a class="ui redstone_ore" title="红石矿石"></a><a class="ui lapis_ore" title="青金石矿石"></a><a class="ui coal_ore" title="煤矿石"></a><a class="ui gold_ore" title="金矿石"></a><a class="ui diamond_ore" title="钻石矿石"></a><a class="ui emerald_ore" title="绿宝石矿石"></a><a class="ui ancient_debris" title="远古残骸"></a></td></tr>
+<tr><th>下界</th><td><a class="ui polished_blackstone" title="磨制黑石"></a><a class="ui cracked_polished_blackstone_bricks" title="磨制黑石砖"></a><a class="ui cracked_polished_blackstone_bricks" title="裂纹磨制黑石砖"></a></td><td><a class="ui chest" title="宝箱"></a><a class="ui ci lava" title="熔岩"></a><a class="ui glowstone" title="萤石"></a><a class="ui nether_quartz_ore" title="下界石英矿石"></a><a class="ui gilded_blackstone" title="镶金黑石"></a><a class="ui nether_gold_ore" title="下界金矿石"></a><a class="ui shroomlight" title="菌光体"></a><a class="ui coal_block" title="煤炭块"></a><a class="ui crying_obsidian" title="哭泣的黑曜石"></a><a class="ui ancient_debris" title="远古残骸"></a></td></tr>
+<tr><th>花世界</th><td><a class="ui hay_block" title="干草块"></a><a class="ui oak_log" title="橡树原木"></a><a class="ui birch_log" title="白桦原木"></a></td><td><a class="ui chest" title="宝箱"></a><a class="ui ci water" title="水"></a><a class="ui melon" title="西瓜"></a><a class="ui pumpkin" title="南瓜"></a><a class="ui cake" title="蛋糕"></a><a class="ui white_wool" title="白色羊毛"></a><a class="ui bone_block" title="骨块"></a><a class="ui composter" title="堆肥桶"></a><a class="ui ci moon_stone" href="#月石" title="月石"></a><a class="ui ancient_debris" title="远古残骸"></a></td></tr>
+</tbody></table>
 <figure>
-	<img style="height:260px" src="items/screenshots/totem_pillar_nether.png" title="下界图腾柱" />
+	<img style="height:260px" src="items/screenshots/totem_pillar.png" title="下界图腾柱" />
 	<figcaption>图 下界图腾柱</figcaption>
 </figure>
 
@@ -3008,7 +3029,7 @@
 	<td><a href="#三色堇" class="ui ci pansy" title="三色堇"></a></td>
 	<td><a href="#阿拉伯婆婆纳" class="ui ci arabia_speedwell" title="阿拉伯婆婆纳"></a></td>
 	<td><a href="#矮雪轮" class="ui ci silene_pendula" title="矮雪轮"></a></td>
-	<td><a href="#蓝色妖姬" class="ui ci blue_rose" title="蓝色妖姬"></a></td>
+	<td><a href="#艾草" class="ui ci artemisia_argyi" title="艾草"></a></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -3031,7 +3052,7 @@
 	<td><a class="ui purple_dye" title="紫色染料"></a></td>
 	<td><a class="ui light_blue_dye" title="淡蓝色染料"></a></td>
 	<td><a class="ui pink_dye" title="粉色染料"></a></td>
-	<td><a class="ui blue_dye" title="蓝色染料"></a></td>
+	<td><a class="ui green_dye" title="绿色染料"></a></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -5778,6 +5799,25 @@
 	</span></td></tr>
 </tbody></table>
 
+<h3 id="香囊">香囊 <code>cpp:sachet</code></h3>
+<p><span class="version">1.11</span> 携带时，附近的节肢生物会试图远离。</p>
+<table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
+<tr><td>品红色羊毛+线+红石+丁香+<a href="#艾草">艾草</a>+<a href="#菖蒲草">菖蒲草</a></td>
+	<td><span class="ui cm" title="合成器">
+		<a class="magenta_wool" title="品红色羊毛"></a>
+		<a class="string" title="线"></a>
+		<a class="redstone" title="红石"></a>
+		<a class="lilac" title="丁香"></a>
+		<a class="ci artemisia_argyi" href="#艾草" title="艾草"></a>
+		<a class="ci calamus" href="#菖蒲草" title="菖蒲草"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="ci sachet" title="香囊"></a>
+		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
+	</span></td></tr>
+</tbody></table>
+
 <h3 id="剪枝器">剪枝器 <code>cpp:grafter</code></h3>
 <p>破坏树叶必定掉落树苗，破坏下界疣/诡异疣块可以得到绯红菌/诡异菌。每次使用消耗2点耐久，共132点耐久。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
@@ -6210,7 +6250,7 @@
 	<td>蘑菇煲 甜菜汤 蜜汁炖菜</td>
 </tr>
 <tr><td>-5</td>
-	<td>面包 烤马铃薯 烤胡萝卜 纸杯蛋糕 可颂 三明治 青团 樱饼</td>
+	<td>面包 烤马铃薯 烤胡萝卜 纸杯蛋糕 可颂 三明治 青团 樱饼 粽子</td>
 </tr>
 <tr><td>-4</td>
 	<td>苹果 金苹果 附魔金苹果 紫颂果 水果 葡萄干</td>
@@ -7148,6 +7188,24 @@
 	</span></td>
 	<td><span class="version">1.10 起</span><br /><code>cpp:sakura_mochi</code></td>
 </tr>
+<tr><th><strong id="粽子">粽子</strong><br />
+		<a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger_half" title="5"></a></th>
+	<td><a href="#芦苇草">芦苇草</a>+<a href="#稻谷">稻谷</a></td>
+	<td><span class="ui cm" title="合成器">
+		<a class="ci esparto" title="芦苇草"></a>
+		<a class="ci rice" title="稻谷"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="ci zongzi" title="粽子"></a>
+		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
+	</span></td>
+	<td><span class="version">1.11</span><br /><code>cpp:zongzi</code></td>
+</tr>
 <tr><th><strong id="三明治">三明治</strong><br />
 		<a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><br />
 		<a class="ui icons18 strength"></a><span class="lore">力量 00:30</span></th>
@@ -7743,7 +7801,7 @@
 <h3 id="花草">花草</h3>
 <p>新增34种花草，天然生成在主世界(1.11前)/花世界(1.11)草方块上。</p>
 <p>前20种花草在合成器中合成为3个对应种子。一共4个生长阶段，成熟后收割可获得相应花草，否则只能获得种子。作物不受时运影响，可用骨粉催熟。每个花草都对应一个实体，大面积种植可能会卡顿。收获成熟的小麦、胡萝卜、马铃薯和甜菜根有5%几率获得六种花草种子，其余花草种子可以通过杂交得到：当一种作物将要生长成熟时，若邻近的花草可杂交，则有5%几率变异为其它花草。</p>
-<p><span class="version">1.10.2 起</span> 后13种野花在空岛模式下可以通过对草方块使用骨粉得到。蓝色妖姬使用玫瑰丛+蓝色染料在合成器合成。</p>
+<p><span class="version">1.10.x</span> 后13种野花在空岛模式下可以通过对草方块使用骨粉得到。</p>
 <p>花草可在熔炉熔炼成其它物品，还可用于合成迷之炖菜，见下表。</p>
 
 <table><thead><tr><th>产物</th>
@@ -8081,11 +8139,31 @@
 	<td><code>cpp:silene_pendula</code></td>
 	<td><a class="ui pink_dye" title="粉色染料"></a></td>
 </tr>
-<tr><td><a class="ui ci blue_rose"></a></td>
-	<th><strong id="蓝色妖姬">蓝色妖姬</strong></th>
-	<td><code>cpp:blue_rose</code></td>
-	<td><a class="ui blue_dye" title="蓝色染料"></a></td>
+<tr><td><a class="ui ci artemisia_argyi"></a></td>
+	<th><strong id="艾草">艾草</strong></th>
+	<td><code>cpp:artemisia_argyi</code></td>
+	<td><a class="ui green_dye" title="绿色染料"></a></td>
 </tr>
+</tbody></table>
+
+<h3 id="蓝色妖姬">蓝色妖姬 <code>cpp:blue_rose</code></h3>
+<table><thead><tr><th>材料</th>
+	<th>合成配方</th>
+</tr></thead><tbody>	
+<tr><td>蓝色染料+玫瑰丛</td>
+	<td><span class="ui cm" title="合成器">
+		<a class="blue_dye" title="蓝色染料"></a>
+		<a class="rose_bush" title="玫瑰丛"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="ci blue_rose" title="蓝色妖姬"></a>
+		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
+	</span></td></tr>
 </tbody></table>
 
 <h3 id="圣诞花">圣诞花 <code>cpp:poinsettia</code></h3>
@@ -9921,7 +9999,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-05-21</p>
+<p>最后更新 2020-06-20</p>
 </footer>
 
 </article>
