--- a/index.html
+++ b/index.html
@@ -384,6 +384,12 @@
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
+		<td>Java版 1.16</td>
+		<td>v1.11</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.zip">官方</a></td>
+	</tr>
+	<tr>
 		<td rowspan="3">Java版 1.16-rc1</td>
 		<td>快照 v1.11-0623</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0623.zip">GitHub</a> |
