--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
 <li style="border-bottom: #ddd 4px solid;padding:3px 0 3px 16px;"><a href="#banner">更多的合成</a></li>
 <li><a href="#自然生成"><span style="background-position: -384px -480px;"></span> 自然生成</a><ul>
 	<li><a href="#花世界"><span style="background-position: -256px -1712px;"></span> 花世界</a></li>
+	<li><a href="#玉世界"><span style="background-position: -144px -848px;"></span> 玉世界</a></li>
 	<li><a href="#苦力怕地牢"><span style="background-position: -384px -480px;"></span> 苦力怕地牢</a></li>
 	<li><a href="#附魔室"><span style="background-position: -448px -608px;"></span> 附魔室</a></li>
 	<li><a href="#图腾柱"><span style="background-position: -0px -1680px;"></span> 图腾柱</a></li>
+	<li><a href="#死珊瑚扇"><span style="background-position: -64px -1072px;"></span> 死珊瑚扇</a></li>
+</ul><ul>
 	<li><a href="#水果树"><span class="ci" style="background-position: -48px -352px;"></span> 水果树</a></li>
 	<li><a href="#矿石树"><span class="ci" style="background-position: -80px -352px;"></span> 矿石树</a></li>
 	<li><a href="#羊毛树"><span class="ci" style="background-position: -64px -352px;"></span> 羊毛树</a></li>
 	<li><a href="#羊毛树"><span class="ci" style="background-position: -48px -1184px;"></span> 樱花树</a></li>
-	<li><a href="#死珊瑚扇"><span style="background-position: -64px -1072px;"></span> 死珊瑚扇</a></li>
 	<li><a href="#灌木丛"><span style="background-position: -432px -512px;"></span> 灌木丛</a></li>
 	<li><a href="#死云杉树"><span style="background-position: -288px -1712px;"></span> 死云杉树</a></li>
 	<li><a href="#作物田"><span style="background-position: -464px -1584px;"></span> 作物田</a></li>
@@ -384,7 +386,12 @@
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
-		<td>Java版 1.16</td>
+		<td rowspan="2">Java版 1.16.x</td>
+		<td>v1.11.1</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.1.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.1.zip">官方</a></td>
+	</tr>
+	<tr>
 		<td>v1.11</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.zip">官方</a></td>
@@ -465,10 +472,17 @@
 <!--==================================================================-->
 <h2 id="自然生成">自然生成</h2>
 <h3 id="花世界">花世界</h3>
-<p><span class="version">1.11</span> 花世界生物群系固定为繁花森林，时间固定为正午，不刷生物。将大型花摆放成正八边形，然后在中间放置白色羊毛即可激活至花世界的传送门。</p>
+<p><span class="version">1.11起</span> 花世界生物群系固定为繁花森林，时间固定为正午，不刷生物。将大型花摆放成正八边形，然后在中间放置白色羊毛即可激活至花世界的传送门。</p>
 <figure>
 	<img style="height:260px" src="items/screenshots/flower_world.png" title="花世界传送门" />
 	<figcaption>图 花世界传送门和图腾柱</figcaption>
+</figure>
+
+<h3 id="玉世界">玉世界</h3>
+<p><span class="version">1.11.1起</span> 玉世界生物群系固定为温暖海洋。其中裸露的沙子下掩埋着宝箱。将珊瑚块摆放成3*4的框形并点火即可激活至玉世界的传送门。</p>
+<figure>
+	<img style="height:260px" src="items/screenshots/jade_world.png" title="花世界传送门" />
+	<figcaption>图 玉世界传送门和宝箱</figcaption>
 </figure>
 
 <h3 id="苦力怕地牢">苦力怕地牢</h3>
@@ -500,6 +514,13 @@
 	<figcaption>图 下界图腾柱</figcaption>
 </figure>
 
+<h3 id="死珊瑚扇">死珊瑚扇</h3>
+<p>因气候巨变而导致死亡的珊瑚扇，天然地生成在沙漠或恶地地表，包含5种。</p>
+<figure>
+	<img style="height:190px" src="items/screenshots/dead_coral_fan.png" title="两个死珊瑚扇" />
+	<figcaption>图 两个死珊瑚扇</figcaption>
+</figure>
+
 <h3 id="水果树">水果树</h3>
 <p>天然生成在主世界和花世界的地表土质方块上，形状与桦树相同，树干为橡木。</p>
 <p><span class="version">1.10 起</span> 树下偶见掉落的水果。</p>
@@ -528,13 +549,6 @@
 <figure>
 	<img style="height:224px" src="items/screenshots/sakura_tree.png" title="樱花树" />
 	<figcaption>图 樱花树</figcaption>
-</figure>
-
-<h3 id="死珊瑚扇">死珊瑚扇</h3>
-<p>因气候巨变而导致死亡的珊瑚扇，天然地生成在沙漠或恶地地表，包含5种。</p>
-<figure>
-	<img style="height:190px" src="items/screenshots/dead_coral_fan.png" title="两个死珊瑚扇" />
-	<figcaption>图 两个死珊瑚扇</figcaption>
 </figure>
 
 <h3 id="灌木丛">灌木丛</h3>
@@ -636,7 +650,7 @@
 <p><span class="oldversion">1.9.x</span> 僵尸猪人死亡时掉落<code>0~(1+抢夺等级)</code>生猪排。</p>
 
 <h3 id="远古守卫者">远古守卫者</h3>
-<p><span class="version">1.10 起</span> 远古守卫者被玩家杀死时有<code>2.5%+抢夺等级×1%</code>几率掉落海洋之心。</p>
+<p><span class="oldversion">1.10-1.11</span> 远古守卫者被玩家杀死时有<code>2.5%+抢夺等级×1%</code>几率掉落海洋之心。</p>
 
 <h3 id="溺尸">溺尸</h3>
 <p><span class="version">1.10 起</span> 溺尸被玩家杀死时有<code>0.53125%+抢夺等级×0.0625%</code>几率掉落三叉戟，且耐久在1%-10%之间，拥有10-30级附魔。</p>
@@ -2325,7 +2339,7 @@
 <tr><td><a class="ui lava_bucket"></a><a href="#黑石插件" class="ui ci blackstone_plugin"></a></td>
 	<td>熔岩桶+<a href="#黑石插件">黑石插件</a></td>
 	<td><a class="ui blackstone"><span class="stack">4</span></a></td>
-	<td>4 黑石 <span class="version">1.10.9起</span></td>
+	<td>4 黑石 <span class="version">1.11起</span></td>
 	<td>1</td>
 	<td>1</td>
 </tr>
@@ -2689,7 +2703,7 @@
 <p><span class="oldversion">1.9.x</span> 配方略有差异。</p>
 
 <p><span class="oldversion">1.10</span> 水桶/熔岩桶/空桶可以被合理的<a href="#无尽桶">无尽桶</a>代替。</p>
-<p><span class="version">1.11</span> 水桶/熔岩桶可以被合理的<a href="#绿色水之力">绿色水之力</a>代替。</p>
+<p><span class="version">1.11起</span> 水桶/熔岩桶可以被合理的<a href="#绿色水之力">绿色水之力</a>代替。</p>
 <button style="display:none;cursor:pointer;" onclick="this.style.display='none';this.nextElementSibling.nextElementSibling.style.display='table';this.nextElementSibling.style.display='inline';">显示物品处理机配方表</button>
 <button onclick="this.style.display='none';this.nextElementSibling.style.display='none';this.previousElementSibling.style.display='inline';">隐藏物品处理机配方表</button>
 <table style="background-color:#ccc;"><thead><tr>
@@ -3398,10 +3412,10 @@
 		<a class="ui xp_orb" title="经验"><span class="stack">8</span></a>
 	</td>
 </tr>
-<tr><td><span class="version">1.11</span> 猪灵(90%)</td>
+<tr><td><span class="version">1.11起</span> 猪灵(90%)</td>
 	<td><a class="ui ci mob_piglin" title="猪灵"></a></td>
 </tr>
-<tr><td><span class="version">1.11</span> 疣猪兽(10%)</td>
+<tr><td><span class="version">1.11起</span> 疣猪兽(10%)</td>
 	<td><a class="ui ci mob_hoglin" title="疣猪兽"></a></td>
 </tr>
 <tr><td>恶魂</td>
@@ -3684,7 +3698,7 @@
 <p>信标增强器性质同箱子。信标增强器被原版红石元件强充能时会停止工作。</p>
 <p>信标增强器下方为激活的信标才会工作。左侧按钮用于选择对玩家生效的正面状态效果，右侧按钮用于选择对非玩家生物生效的负面状态效果，最右侧按钮用于选择负面状态效果对所有非玩家生物还是仅怪物生效，使用左键或Q键切换。对村民无效。</p>
 <p>对玩家生效的正面状态效果包括：抗火、夜视、水下呼吸、隐身、饱和、连锁(1.10起)，对非玩家生物生效的负面状态效果包括：虚弱、缓慢、发光、中毒、凋零、吸引(将附近的生物传送至信标增强仪上方，1.10起)。影响范围基于下方的信标等级，为半径=10×(等级+1)的球形区域。</p>
-<p><span class="version">1.11</span> 放置/破坏信标增强仪可以添加/取消当前区块常加载。对已放置的信标增强器按下右键会打开 GUI，任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强仪的正面效果范围提升至全地图，负面提升至128米。</p>
+<p><span class="version">1.11起</span> 放置/破坏信标增强仪可以添加/取消当前区块常加载。对已放置的信标增强器按下右键会打开 GUI，任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强仪的正面效果范围提升至全地图，负面提升至128米。</p>
 <p><span class="oldversion">1.10.x</span> 放置/破坏信标增强仪可以添加/取消当前区块常加载。对已放置的信标增强器按下右键会打开 GUI，任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强仪的效果范围提升至全地图(吸引范围128米)。</p>
 <p><span class="oldversion">1.9.x</span> 若下方为4级信标，每秒恢复64米内玩家1点魔法值，上限60点。若信标矿物块塔的顶层为X形的5个日石和4个月石，则额外每秒恢复128米内玩家1点魔法值，上限100点。</p>
 
@@ -3925,7 +3939,7 @@
 		<a href="#附魔铁锭" class="ci enchanted_iron" title="附魔铁锭"></a>
 		<a class="ci blackstone_plugin" title="黑石插件"></a>
 	</span></td>
-	<td><span class="version">1.10.9起</span><br />
+	<td><span class="version">1.11起</span><br />
 		<code>cpp:blackstone_plugin</code><br />
 		用于<a href="#多功能一体机">多功能一体机</a>低温常压模式下制造黑石。</td>
 </tr>
@@ -5408,7 +5422,7 @@
 </tr></tbody></table>
 
 <h3 id="绿色水之力">绿色水之力 <code>cpp:green_force_of_water</code></h3>
-<p><span class="version">1.11</span> 右键收集水和熔岩并存储起来。Shift右键放置水和熔岩，对着空气Shift右键切换放置何种液体。默认拥有无限水。<em>Surrare Lilpana!</em></p>
+<p><span class="version">1.11起</span> 右键收集水和熔岩并存储起来。Shift右键放置水和熔岩，对着空气Shift右键切换放置何种液体。默认拥有无限水。<em>Surrare Lilpana!</em></p>
 <p><span class="oldversion">1.9-1.10</span> 右击放置一格水，在下界亦可正常使用。</p>
 
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
@@ -5790,7 +5804,7 @@
 </tbody></table>
 
 <h3 id="香囊">香囊 <code>cpp:sachet</code></h3>
-<p><span class="version">1.11</span> 携带时，附近的节肢生物会试图远离。</p>
+<p><span class="version">1.11起</span> 携带时，附近的节肢生物会试图远离。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td>红色羊毛+线+红石+丁香+<a href="#艾草">艾草</a>+<a href="#菖蒲草">菖蒲草</a></td>
 	<td><span class="ui cm" title="合成器">
@@ -7194,7 +7208,14 @@
 		<a class="ci zongzi" title="粽子"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
-	<td><span class="version">1.11</span><br /><code>cpp:zongzi</code></td>
+	<td rowspan="2"><span class="version">1.11起</span><br />
+		<a class="ui ci zongzi" title="粽子"></a> 原味 <code>cpp:zongzi</code><br />
+		<a class="ui ci zongzi_boiled_egg" title="粽子"></a> 蛋黄馅 <code>cpp:zongzi.boiled_egg</code><br />
+		<a class="ui ci zongzi_chinese_date" title="粽子"></a> 蜜枣馅 <code>cpp:zongzi.chinese_date</code><br />
+		<a class="ui ci zongzi_cooked_porkchop" title="粽子"></a> 猪肉馅 <code>cpp:zongzi.cooked_porkchop</code><br />
+		<a class="ui ci zongzi_salt" title="粽子"></a> 咸味 <code>cpp:zongzi.salt</code><br />
+		<a class="ui ci zongzi_soda_water" title="粽子"></a> 碱水味 <code>cpp:zongzi.soda_water</code><br />
+		<a class="ui ci zongzi_honey_bottle" title="粽子"></a> 甜味 <code>cpp:zongzi.honey_bottle</code></td>
 </tr>
 <tr><td>
 	<a href="#芦苇草">芦苇草</a>+<a href="#稻谷">稻谷</a>+<a href="#煮鸡蛋">煮鸡蛋</a><br />
@@ -7213,15 +7234,9 @@
 		<a class="empty"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
-		<a class="ci zongzi" title="粽子"></a>
+		<a class="ci zongzi_chinese_date" title="粽子"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
-	<td>蛋黄馅 <code>cpp:zongzi.boiled_egg</code><br />
-		蜜枣馅 <code>cpp:zongzi.chinese_date</code><br />
-		猪肉馅 <code>cpp:zongzi.cooked_porkchop</code><br />
-		咸味 <code>cpp:zongzi.salt</code><br />
-		碱水味 <code>cpp:zongzi.soda_water</code><br />
-		甜味 <code>cpp:zongzi.honey_bottle</code></td>
 </tr>
 <tr><th><strong id="三明治">三明治</strong><br />
 		<a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><br />
@@ -8225,7 +8240,7 @@
 <h3 id="稻谷">稻谷 <code>cpp:rice</code></h3>
 <a class="ui ci rice"></a><a class="ui ci rice0"></a><a class="ui ci rice1"></a><a class="ui ci rice2"></a><a class="ui ci rice3"></a>
 <p>破坏草有几率得到稻谷，可以种植在任何土上。生长共4个阶段，完全成熟后破坏得到4份稻谷，否则只能得到1份稻谷。</p>
-<p><span class="version">1.11</span> 必须邻近水，否则即使使用骨粉也不会生长。</p>
+<p><span class="version">1.11起</span> 必须邻近水，否则即使使用骨粉也不会生长。</p>
 <p><span class="oldversion">1.10</span> 下方如果不是耕地则会不定时弹出。下方必须是完全湿润的耕地，否则即使使用骨粉也不会生长。</p>
 
 <h3 id="树">树</h3>
@@ -9509,7 +9524,7 @@
 <a class="ui ci black_sign"></a>
 <a class="ui ci glass_sign"></a>
 
-<p><span class="version">1.11</span> 移除了合成配方，改成向告示牌扔出染料/玻璃板来改变其材质。</p>
+<p><span class="version">1.11起</span> 移除了合成配方，改成向告示牌扔出染料/玻璃板来改变其材质。</p>
 <table><thead><tr><th>名称</th>
 	<th>材料</th>
 	<th>合成配方</th></tr></thead>
@@ -9642,7 +9657,7 @@
 <h2 id="空岛">空岛</h2>
 <p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:flower_forest;</code>进入。空岛模式下主世界不会生成模组的结构，不同玩家的间距默认为1000米。</p>
 <p>玩家首次进入时，会生成一块基岩和一个包含1泥土、4橡树树苗(1.9.x版本为1个)、16骨粉的箱子。玩家破坏树叶会掉落骨粉和线，然后参考<a href="#其它原版物品">本模组原版物品合成变动</a>，使用线和8木棍合成雪球。
-<p><span class="version">1.10.x-1.11</span> 在堆肥桶上方放置雪块可将其变成<strong>发酵桶</strong>，类似于堆肥桶，放入各种植物或食物满了之后，会产出泥土。在泥土上放置草丛可以得到草方块。</p>
+<p><span class="version">1.10.x-1.11起</span> 在堆肥桶上方放置雪块可将其变成<strong>发酵桶</strong>，类似于堆肥桶，放入各种植物或食物满了之后，会产出泥土。在泥土上放置草丛可以得到草方块。</p>
 <p><span class="oldversion">1.9.x</span> 使用雪球和4树苗/马铃薯/胡萝卜/小麦/甜菜根的任意组合合成泥土。
 
 <p>使用雪球和8泥土合成8圆石，制作熔炉，在熔炉上方放置雪块可将其变成<strong>方块破坏器</strong>，之后在其上方放置方块并右击方块破坏器可以打碎该方块。掉落物如下：</p>
