--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 	<tr>
 		<td rowspan="2">Java版 20w46a</td>
 		<td>v1.12-1119</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.12/v1.12-1119.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/attach_files/524000/download/v1.12-1119.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.12/v1.12-1119.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1119.zip">其它</a></td>
 		<td><a href="versions/1.12/readme.md">更新日志</a></td>
@@ -393,45 +393,27 @@
 	<tr>
 		<td rowspan="2">Java版 1.16.2-1.16.4</td>
 		<td>v1.11.2-1119</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.11/v1.11.2-1119.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/attach_files/524012/download/v1.11.2-1119.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.2-1119.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1119.zip">其它</a></td>
-		<td rowspan="4"><a href="versions/1.11/readme.md">更新日志</a></td>
+		<td rowspan="3"><a href="versions/1.11/readme.md">更新日志</a></td>
 	</tr>
 	<tr><td colspan="2"></td></tr>
 	<tr>
 		<td rowspan="2">Java版 1.16-1.16.1</td>
 		<td>v1.11.1</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.11/v1.11.1.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/attach_files/524021/download/v1.11.1.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.1.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.1.zip">其它</a></td>
 	</tr>
-	<tr>
-		<td>v1.11</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.11/v1.11.zip">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.zip">其它</a></td>
-	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
-		<td rowspan="3">Java版 1.15.2</td>
+		<td>Java版 1.15.2</td>
 		<td>v1.10.11</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.10/v1.10.11.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/attach_files/524020/download/v1.10.11.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.11">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.11.zip">其它</a></td>
-		<td rowspan="3"><a href="versions/1.10/readme.md">更新日志</a></td>
-	</tr>
-	<tr>
-		<td>v1.10.10</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.10/v1.10.10.zip">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.10">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.10.zip">其它</a></td>
-	</tr>
-	<tr>
-		<td>v1.10.9</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.10/v1.10.9.zip">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.9">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.9.zip">其它</a></td>
+		<td><a href="versions/1.10/readme.md">更新日志</a></td>
 	</tr>
 </tbody></table>
 
