--- a/index.html
+++ b/index.html
@@ -375,45 +375,41 @@
 <p>如有任何意见建议，欢迎在<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>(入群答案发酵桶)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/issues/new">发起issue</a>、<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <h3 id="下载与安装">📦 下载与安装</h3>
-<p>更多版本请<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions">前往 Gitee 页面查看</a>或<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/">前往 GitHub 页面查看</a>。其它链接：<a href="https://zhangshenxing.gitee.io/craftingplusplus/">官方主页</a>、<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>。本页面仅包含1.10及以上版本的内容。</p>
+<p>更多版本请前往<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>下载。其它链接<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>未必能及时更新。本页面仅包含1.10及以上版本的内容。</p>
 <table><thead><tr><th>支持的minecraft版本</th>
 	<th>Crafting++版本</th>
-	<th>下载地址</th>
-	<th>更新日志</th></tr></thead>
+	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
 		<td rowspan="2">Java版 20w46a</td>
-		<td>v1.12-1119</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/attach_files/524000/download/v1.12-1119.zip">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.12/v1.12-1119.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1119.zip">其它</a></td>
-		<td><a href="versions/1.12/readme.md">更新日志</a></td>
+		<td>v1.12-1121</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1121">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1121">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1121.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td rowspan="2">Java版 1.16.2-1.16.4</td>
 		<td>v1.11.2-1119</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/attach_files/524012/download/v1.11.2-1119.zip">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.2-1119.zip">GitHub</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1119">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1119">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1119.zip">其它</a></td>
-		<td rowspan="3"><a href="versions/1.11/readme.md">更新日志</a></td>
 	</tr>
 	<tr><td colspan="2"></td></tr>
 	<tr>
 		<td rowspan="2">Java版 1.16-1.16.1</td>
 		<td>v1.11.1</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/attach_files/524021/download/v1.11.1.zip">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.1.zip">GitHub</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.1">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.1">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.1.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td>Java版 1.15.2</td>
 		<td>v1.10.11</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/attach_files/524020/download/v1.10.11.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.10.11">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.11">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.11.zip">其它</a></td>
-		<td><a href="versions/1.10/readme.md">更新日志</a></td>
 	</tr>
 </tbody></table>
 
@@ -463,7 +459,7 @@
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
 <p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">月下贱影 一米八微笑 明月庄主 SPGoding Rhythm萱 唯一丶为伊 8Index LIXIAOGANG 陌余Oucher uuu2011 爱发电用户_AU9c 甘小蔗 空白 火星浮云 这是彩虹糖呢 古镇天 支持国产mod 倪采臣 zzzz 大吃货 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx TUCAOEVER</span></p>
 <!--一米八微笑 250 明月庄主 250 Rhythm萱8Index 128 月下贱影 300 LIXIAOGANG 96 SPGoding 136 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣大吃货 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
-<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://www.mcmod.cn/class/250.html">无中生有</a>，<a href="https://www.mcmod.cn/class/353.html">等价交换</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>等小组以及天狼星black、MC先生、pineapple_、贰逼、ECS、pca、玄素、乙烯_中国、⊙v⊙、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap、Lakejason等玩家亦对此模组有贡献。</p>
+<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://www.mcmod.cn/class/250.html">无中生有</a>，<a href="https://www.mcmod.cn/class/353.html">等价交换</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>等小组以及天狼星black、MC先生、pineapple_、贰逼、ECS、pca、玄素、乙烯_中国、⊙v⊙、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap、Lakejason、Ph-苯等玩家亦对此模组有贡献。</p>
 <p>感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
 <!--==================================================================-->
@@ -504,7 +500,7 @@
 <tr><th>主世界<span class="oldversion">1.10-1.11.1</span></th><td><a class="ui stone_bricks" title="石砖"></a><a class="ui cracked_stone_bricks" title="裂石砖"></a><a class="ui mossy_stone_bricks" title="苔石砖"></a></td><td><a class="ui chest" title="宝箱"></a><a class="ui ci lava" title="熔岩"></a><a class="ui iron_ore" title="铁矿石"></a><a class="ui redstone_ore" title="红石矿石"></a><a class="ui lapis_ore" title="青金石矿石"></a><a class="ui coal_ore" title="煤矿石"></a><a class="ui gold_ore" title="金矿石"></a><a class="ui diamond_ore" title="钻石矿石"></a><a class="ui emerald_ore" title="绿宝石矿石"></a><a class="ui ancient_debris" title="远古残骸"></a></td></tr>
 <tr><th>下界<span class="oldversion">1.10-1.11.1</span></th><td><a class="ui polished_blackstone" title="磨制黑石"></a><a class="ui cracked_polished_blackstone_bricks" title="磨制黑石砖"></a><a class="ui cracked_polished_blackstone_bricks" title="裂纹磨制黑石砖"></a></td><td><a class="ui chest" title="宝箱"></a><a class="ui ci lava" title="熔岩"></a><a class="ui glowstone" title="萤石"></a><a class="ui nether_quartz_ore" title="下界石英矿石"></a><a class="ui gilded_blackstone" title="镶金黑石"></a><a class="ui nether_gold_ore" title="下界金矿石"></a><a class="ui shroomlight" title="菌光体"></a><a class="ui coal_block" title="煤炭块"></a><a class="ui crying_obsidian" title="哭泣的黑曜石"></a><a class="ui ancient_debris" title="远古残骸"></a></td></tr>
 <tr><th>花世界<span class="oldversion">1.10-1.11.1</span></th><td><a class="ui hay_block" title="干草块"></a><a class="ui oak_log" title="橡树原木"></a><a class="ui birch_log" title="白桦原木"></a></td><td><a class="ui chest" title="宝箱"></a><a class="ui ci water" title="水"></a><a class="ui melon" title="西瓜"></a><a class="ui pumpkin" title="南瓜"></a><a class="ui cake" title="蛋糕"></a><a class="ui white_wool" title="白色羊毛"></a><a class="ui bone_block" title="骨块"></a><a class="ui composter" title="堆肥桶"></a><a class="ui ci moon_stone" href="#月石" title="月石"></a><a class="ui ancient_debris" title="远古残骸"></a></td></tr>
-<tr><th>花世界<span class="version">1.11.2</span></th><td><a class="ui stone_bricks" title="石砖"></a><a class="ui cracked_stone_bricks" title="裂石砖"></a><a class="ui mossy_stone_bricks" title="苔石砖"></a></td><td><a class="ui chest" title="宝箱"></a><a class="ui ci lava" title="熔岩"></a><a class="ui iron_ore" title="铁矿石"></a><a class="ui redstone_ore" title="红石矿石"></a><a class="ui lapis_ore" title="青金石矿石"></a><a class="ui coal_ore" title="煤矿石"></a><a class="ui gold_ore" title="金矿石"></a><a class="ui diamond_ore" title="钻石矿石"></a><a class="ui emerald_ore" title="绿宝石矿石"></a><a class="ui glowstone" title="萤石"></a><a class="ui nether_quartz_ore" title="下界石英矿石"></a><a class="ui ancient_debris" title="远古残骸"></a><a class="ui ci moon_stone" href="#月石" title="月石"></a></td></tr>
+<tr><th>花世界<span class="oldversion">1.11.2</span></th><td><a class="ui stone_bricks" title="石砖"></a><a class="ui cracked_stone_bricks" title="裂石砖"></a><a class="ui mossy_stone_bricks" title="苔石砖"></a></td><td><a class="ui chest" title="宝箱"></a><a class="ui ci lava" title="熔岩"></a><a class="ui iron_ore" title="铁矿石"></a><a class="ui redstone_ore" title="红石矿石"></a><a class="ui lapis_ore" title="青金石矿石"></a><a class="ui coal_ore" title="煤矿石"></a><a class="ui gold_ore" title="金矿石"></a><a class="ui diamond_ore" title="钻石矿石"></a><a class="ui emerald_ore" title="绿宝石矿石"></a><a class="ui glowstone" title="萤石"></a><a class="ui nether_quartz_ore" title="下界石英矿石"></a><a class="ui ancient_debris" title="远古残骸"></a><a class="ui ci moon_stone" href="#月石" title="月石"></a></td></tr>
 <tr><th>花世界<span class="version">1.12</span></th><td><a class="ui stone_bricks" title="石砖"></a><a class="ui cracked_stone_bricks" title="裂石砖"></a><a class="ui mossy_stone_bricks" title="苔石砖"></a></td><td><a class="ui chest" title="宝箱"></a><a class="ui ci lava" title="熔岩"></a><a class="ui iron_ore" title="铁矿石"></a><a class="ui redstone_ore" title="红石矿石"></a><a class="ui lapis_ore" title="青金石矿石"></a><a class="ui coal_ore" title="煤矿石"></a><a class="ui gold_ore" title="金矿石"></a><a class="ui diamond_ore" title="钻石矿石"></a><a class="ui emerald_ore" title="绿宝石矿石"></a><a class="ui copper_ore" title="铜矿石"></a><a class="ui nether_quartz_ore" title="下界石英矿石"></a><a class="ui ancient_debris" title="远古残骸"></a><a class="ui ci moon_stone" href="#月石" title="月石"></a></td></tr>
 </tbody></table>
 <figure>
@@ -9564,7 +9560,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-11-19</p>
+<p>最后更新 2020-11-21</p>
 </footer>
 
 </article>
